# llm-sandbox-deepagents-demo

./: .dockerignore  AGENTS.md  EVALUATION_REPORT.md  README.md  docker-compose.yml  env.example  pyproject.toml
demos/: sandbox_service.py
docker/: Dockerfile.sandbox  Dockerfile.service
llm_sandbox_deepagents_adapter/: __init__.py  llm_sandbox_backend.py
llm_sandbox_deepagents_adapter/tests/: test_protocol.py
tests/: pressure_test.py  test_async.py  test_concurrent_multi_user.py  test_level1_infrastructure.py
tests/test_integration/: conftest.py  test_agent_execute.py  test_agent_multiturn.py
